<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_EnumType" Id="{f450a283-2574-453a-9804-7cb9de34a5f1}">
    <Declaration><![CDATA[TYPE ST_EnumType :
STRUCT
	nKey : UDINT;
	sName : STRING(255);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>